frontend/tests/cases/positive/gex1.gr
test : Int [2] → Int
test = λx → let [y] = x in y + y

test' : Int [2] → Int
test' [y] = y + y

main : Int
main = test [1] + test' [2]
