frontend/tests/cases/negative/polarityHO.gr
thirdOrder : ((Int [0] → Int) → Int) → Int
thirdOrder f =
        f (λ(yb : Int [1]) → let [y] : Int = yb in y)
